# multi-ai-dev-system

./: .env.backup  .env.example  .env.template  .gitignore  BACKEND_MODULAR_SOLUTION.md  DEPRECATED_WORKFLOWS.md  Dockerfile  ENDPOINT_CLEANUP_ANALYSIS.md  INTEGRATION_CLEANUP_COMPLETE.md  MODULARIZATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  README_MOCK_TESTING.md  REFACTORING_COMPLETE_SUMMARY.md  SIMPLIFICATION_MIGRATION_PLAN.md  TECH_STACK_APPROVAL_FIXES.md  TECH_STACK_ISSUES_SUMMARY.md  WORKFLOW_APPROVAL_FIXES.md  WORKFLOW_EXTENSIONS_SUMMARY.md  WORKFLOW_UI_FIXES_COMPLETE.md  __init__.py  agent_state.py  agent_temperatures.py  app.py  async_graph.py  async_graph_microservice.py  async_graph_nodes.py  async_graph_simple.py  async_graph_state_driven.py  checkpoint_manager.py  config.py  conftest.py  data_recovery_manager.py  database.db  debug_interrupt_payload.py  debug_langsmith_env.py  debug_tech_stack.py  debug_workflow_selection.py  dev_console.py  dev_server.py  (+92 more)
output/V-KYC 1st successful/: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Dockerfile  RUNBOOK.md  auth.py  backup.sh  backup_restore.sh  config.py  crud.py  crud_templates.sql  data_validation.sql  database.py  dependencies.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  error_handlers.py  error_handling.py  errors.py  handlers.py  indexes.sql  logging_config.py  middlewares.py  models.py  next.config.mjs  nfs_service.py  performance_monitoring.sql  performance_monitoring_queries.sql  procedures.sql  prometheus.yml  pyproject.toml  recording_service.py  requirements-dev.txt  requirements.txt  schema.sql  schemas.py  tailwind.config.js  (+1 more)
output/V-KYC 1st successful/alembic/: alembic.ini  env.py
output/V-KYC 1st successful/api/: deps.py
output/V-KYC 1st successful/app/: crud.py  database.py  db.py  main.py  requirements.txt  schemas.py  security.py  security_headers.py
output/V-KYC 1st successful/backend/: .env.example  Dockerfile  pyproject.toml
output/V-KYC 1st successful/config/: database.ini
output/V-KYC 1st successful/core/: dependencies.py  error_handlers.py  exceptions.py  logger.py  security.py
output/V-KYC 1st successful/db/: crud_queries.sql  database.py  models.py  procedures.sql  seed_data.sql
output/V-KYC 1st successful/docs/: OPERATIONAL_GUIDE.md  troubleshooting.md
output/V-KYC 1st successful/frontend/: .env.example  Dockerfile
output/V-KYC 1st successful/k8s/: deployment.yaml  service.yaml
output/V-KYC 1st successful/kubernetes/: backend-deployment.yaml  fastapi-deployment.yaml  k8s-manifests.yaml
output/V-KYC 1st successful/middleware/: rate_limit.py  security_middleware.py
output/V-KYC 1st successful/models/: user.py  user_model.py
output/V-KYC 1st successful/monitoring/: prometheus.yml
output/V-KYC 1st successful/prometheus/: rules.yml
output/V-KYC 1st successful/routers/: __init__.py  audit_logs.py  auth.py  health.py  security_testing.py  tests.py  vkyc_recordings.py
output/V-KYC 1st successful/routes/: auth.py
output/V-KYC 1st successful/schemas/: common.py  recording.py  recording_schemas.py  schemas.py  user.py  user_schema.py  user_schemas.py
output/V-KYC 1st successful/scripts/: backup_restore.sh  deploy.sh
output/V-KYC 1st successful/security/: auth.py  bandit.yaml  bandit_baseline.json  dependencies.py  trivy-config.yaml
output/V-KYC 1st successful/services/: audit_log_service.py  bulk_request_service.py  file_parser_service.py  file_service.py  item_service.py  vkyc_service.py
output/V-KYC 1st successful/src/: App.tsx  db_connection.py  index.css  main.tsx  setupTests.ts
output/V-KYC 1st successful/terraform/: main.tf  outputs.tf  variables.tf
output/V-KYC 1st successful/tests/: conftest.py  test_api.py  test_api_downloads.py  test_api_endpoints.py  test_app.py  test_auth.py  test_bulk_request_service.py  test_download_service.py  test_file_parser_service.py  test_integration.py  test_recording_service.py  test_security_testing.py  test_user_service.py  test_users.py  test_vkyc_api.py  test_vkyc_recordings.py  test_vkyc_service.py
output/V-KYC 1st successful/utils/: dependencies.py  error_handlers.py  redis_client.py
output/V-KYC 2/app/: Dockerfile  config.py  database.py  dependencies.py  error_handling.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  security.py
output/V-KYC 3/: .env.backend  .env.example  .env.grafana  .env.prod.example  .env.template  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TROUBLESHOOTING.md  auth.py  auth_utils.py  backup_restore.sh  config.py  crud.py  crud_queries.sql  crud_templates.sql  data_validation.sql  database.py  db_connection.py  dependencies.py  docker-compose.prod.yml  docker-compose.yml  error_handlers.py  exceptions.py  health_check.py  indexes.sql  init_db.sh  jest.setup.ts  locustfile.py  logger.py  logging_config.py  main.py  middleware.py  models.py  monitoring.py  monitoring_queries.sql  package.json  performance_monitoring.sql  pyproject.toml  (+15 more)
output/V-KYC 3/api/: admin_router.py  auth_router.py  user_router.py
output/V-KYC 3/app/: auth.py  config.py  crud.py  database.py  exceptions.py  handlers.py  logger.py  main.py  middleware.py  models.py  schemas.py  security.py  services.py
output/V-KYC 3/auth/: security.py
output/V-KYC 3/backend/: Dockerfile  Dockerfile.backend  pyproject.toml  requirements.txt
output/V-KYC 3/config/: database.ini
output/V-KYC 3/core/: auth_bearer.py  dependencies.py  error_handlers.py  exceptions.py  logger.py  logging_config.py  security.py
output/V-KYC 3/docs/: OPERATIONAL_GUIDE.md
output/V-KYC 3/frontend/: .gitkeep
output/V-KYC 3/middleware/: rate_limit.py  (+3 more)
output/project_run_20250526145105/: .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
test_output/architecture_test/: .gitignore  CONTRIBUTING.md  Dockerfile (frontend  README.md  debug_llm_output.txt  docker-compose.yml  package.json  pyproject.toml  requirements.txt  test_result.json
(+7092 files in other folders)
