[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-ai-dev-system"
version = "0.1.0"
description = "Multi-AI Agent Software Development Automation System"
readme = "README.md"
requires-python = ">=3.9"

[tool.langchain]
export = "serve_chain:chain_object"