[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_ai_dev_system"
version = "0.1.0"
description = "Multi-AI Agent Software Development Automation System"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["multi_ai_dev_system*", "agents*", "tools*"]

[tool.langchain]
export = "serve_chain:chain_object"

[tool.pytest.ini_options]
norecursedirs = "test_output"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = "*/setup.py"
filter_files = true

[tool.mypy]
ignore_missing_imports = true
# Additional mypy configurations can be added here