[tool.poetry]
name = "fastapi-production-service"
version = "0.1.0"
description = "A production-ready FastAPI service."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
httpx = "^0.27.0" # For integration tests

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
locust = "^2.22.0"
pylint = "^3.2.2"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.pylint.'MASTER']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "redefined-outer-name", # Often triggered by pytest fixtures
]
good-names = ["app", "db", "id", "fp", "fn", "tn", "tp", "ex", "i", "j", "k", "e"]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120