[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-web-app"
version = "0.1.0"
description = "A simple web application"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg2-binary",
    "python-dotenv",
    "requests",
]

[tool.flake8]
max-line-length = 120