[tool.poetry]
name = "fastapi-operational-backend"
version = "0.1.0"
description = "FastAPI backend with comprehensive operational infrastructure."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-dotenv = "^1.0.0"
pydantic-settings = "^2.3.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.0" # For integration tests, also useful for making requests from app
prometheus-client = "^0.20.0" # For exposing metrics
starlette-exporter = "^0.18.0" # For FastAPI metrics integration

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.0"
locust = "^2.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "venv", ".venv", "alembic"]
ignore = ["E203", "W503"] # E203: whitespace before ':', W503: line break before binary operator

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Temporarily ignore missing imports for external libraries