[tool.poetry]
name = "fastapi-monolith"
version = "0.1.0"
description = "A production-ready FastAPI monolithic application."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-dotenv = "^1.0.1"
httpx = "^0.27.0" # For integration tests
psycopg2-binary = "^2.9.9" # Example DB driver, remove if not using Postgres

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
flake8 = "^7.1.0"
bandit = "^1.7.9"
locust = "^2.22.0" # For performance testing
pre-commit = "^3.7.1"

[tool.pytest.ini_options]
pythonpath = ["backend"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-paths"
testpaths = [
    "backend/tests/unit",
    "backend/tests/integration",
    "backend/tests/performance",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"] # E203: whitespace before ':', W503: line break before binary operator
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.bandit]
targets = ["backend/app/"]
exclude_dirs = ["backend/tests/"]
skips = ["B101"] # B101: assert_used (allow asserts in tests)
confidence_level = "HIGH"
severity_level = "MEDIUM"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"